<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_my_nanodegree_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/my_nanodegree_apps"
        android:textAppearance="?android:textAppearanceLarge"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/btColorBlueA"
            android:padding="12dp"
            android:text="@string/spotify_streamer"
            android:onClick="displayToast"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_scores_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/btColorBlueA"
            android:padding="12dp"
            android:text="@string/scores_app"
            android:onClick="displayToast"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_library_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/btColorBlueA"
            android:padding="12dp"
            android:text="@string/library_app"
            android:onClick="displayToast"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/btColorBlueA"
            android:padding="12dp"
            android:text="@string/build_it_bigger"
            android:onClick="displayToast"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_bacon_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/btColorBlueA"
            android:padding="12dp"
            android:text="@string/bacon_reader"
            android:onClick="displayToast"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_capstone_my_own_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/btColorBlueB"
            android:padding="12dp"
            android:text="@string/capstone_my_own_app"
            android:onClick="displayToast"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>